--- a/lesson20/src/main.css
+++ b/lesson20/src/main.css
@@ -55,4 +55,19 @@ button {
 
 
 
+/*.ng-dirty.ng-invalid {
+    background-color: hotpink;
+}
+.ng-dirty.ng-valid {
+    background-color: forestgreen;
+}*/
+
+
+
+
+
+
+
+
+
 
