--- a/lesson13/src/styles.styl
+++ b/lesson13/src/styles.styl
@@ -4,7 +4,7 @@
 
 button
   background rgba(#ff00cc, 0.7)
-  color: #fd0cc7
+  color #fd0cc7
   &:hover
     background lighten(@background, 20%)
   &:active
